[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Eugene Chernyshov <chernyshov.eugene@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.2"
sympy = "^1.12"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
